--- a/japan-photos.html
+++ b/japan-photos.html
@@ -107,7 +107,7 @@
                         <img src="./images/japan-photo/cropped-copy/old.jpg" alt="Day 1" style="width: 100%;padding-right: 10px;padding-bottom: 15px;"/>
                     </a>
                     <a href="./images/japan-photo/all-days/day-1/osaka-angel.JPG" data-lightbox="day1" data-title="Day 1: Street Art">
-                        <img src="./images/japan-photo/cropped-copy/osaka-angel.JPG" alt="Day 1" style="width: 100%;padding-right: 10px;padding-bottom: 15px;"/>
+                        <img src="./images/japan-photo/cropped-copy/osaka-angel.jpg" alt="Day 1" style="width: 100%;padding-right: 10px;padding-bottom: 15px;"/>
                     </a>
                     <a href="./images/japan-photo/all-days/day-1/street.JPG" data-lightbox="day1" data-title="Day 1: Wandering Osaka">
                         <img src="./images/japan-photo/cropped-copy/street.jpg" alt="Day 1" style="width: 100%;padding-right: 10px;padding-bottom: 15px;" />
@@ -188,7 +188,7 @@
                             <img src="./images/japan-photo/cropped-copy/shore.jpg" alt="Day4" style="width: 100%;padding-right: 10px;padding-bottom: 15px;" />
                         </a>
                         <a href="./images/japan-photo/all-days/day-4/water.JPG" data-lightbox="day1" data-title="Day 4: Naoshima old houses">
-                            <img src="./images/japan-photo/cropped-copy/water-naoshima.JPG" alt="Day4" style="width: 100%;padding-right: 10px;padding-bottom: 15px;" />
+                            <img src="./images/japan-photo/cropped-copy/water-naoshima.jpg" alt="Day4" style="width: 100%;padding-right: 10px;padding-bottom: 15px;" />
                         </a>
                         <a href="./images/japan-photo/all-days/day-4/stone.JPG" data-lightbox="day1" data-title="Day 4: Benesse House Museum">
                             <img src="./images/japan-photo/cropped-copy/stone.jpg" alt="Day4" style="width: 100%;padding-right: 10px;padding-bottom: 15px;" />
