--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                     <p><img style="float: left; max-width: 200px; padding-right: 15px; padding-bottom: 10px;" 
                         src="./images/about/sistaspng-10.png" alt="Cameron" /></p>
                     <h3>Who's Cameron?</h3>
-                    <p>Cameron is Interior Designer by trade and passionate about good food, art, and exploring new places. She's the elder of our sister duo who's always down to go out and do something. You'll often find her taking strolls with her Goldendoodle Mackie, binging a new show, and asking: "who designed this?" when confronted with questionable designs. </p>
+                    <p>Cameron is an Interior Designer by trade and passionate about good food, art, and exploring new places. She's the elder of our sister duo who's always down to go out and do something. You'll often find her taking strolls with her Goldendoodle Mackie, binging a new show, and asking: "who designed this?" when confronted with questionable designs. </p>
                 </div>
                 <div clss="mb-5">
                     <p><img style="float: right; max-width: 200px; padding-left: 15px; padding-bottom: 10px;" 
